# MPNA_PRR

./: .gitignore  CMakeLists.txt  README.md  bcsstm12.mtx  build.sh  calcul_residu.c  calcul_residu.h  main.c  mat1.txt  mat2.txt  mat3.txt  mat30x30.txt  projection.c  projection.h  prr.c  resolution_sev.c  retour_espace_depart.c  retour_espace_depart.h  run_bench.sh  run_config.cfg  tools.c  tools.h
logs/bcsstm12/m10/: 1_icc_mpi-1_omp-1.cfg  5_icc_mpi-8_omp-16.cfg
logs/bcsstm12/m20/: 1_m20_mpi1_omp1.cfg  2_icc_mpi-1_omp-8.cfg  3_icc_mpi-8_omp-16.cfg
logs/bcsstm12/m8/: 1_icc_mpi-1_omp-1.cfg  4_icc_mpi-1_omp-8.cfg  5_icc_mpi-8_omp-16.cfg
logs/bcsstm12_mpi_variable/: 04_icc_mpi-4_omp-16.cfg  05_icc_mpi-5_omp-16.cfg  07_icc_mpi-7_omp-16.cfg  10_icc_mpi-10_omp-16.cfg
logs/bcsstm13/2023-02-16-11:15:12-bcsstm13-m10/: 1_icc_mpi-1_omp-1.cfg  3_icc_mpi-8_omp-16.cfg
logs/bcsstm13/2023-02-16-17:07:02-m20-30/: 11_icc_mpi-1_omp-8.cfg  5_icc_mpi-1_omp-8.cfg  6_icc_mpi-8_omp-16.cfg  8_icc_mpi-1_omp-1.cfg
logs/bcsstm13/m10/: 2_icc_mpi-1_omp-8.cfg
logs/bcsstm13/m20/: 1_icc_mpi-1_omp-1.cfg  2_icc_mpi-1_omp-1.cfg  2_icc_mpi-1_omp-8.cfg
logs/bcsstm13/m30/: 1_icc_mpi-1_omp-1.cfg  2_icc_mpi-1_omp-8.cfg  3_icc_mpi-8_omp-16.cfg
logs/bfw398b-bench-omp/: 1_icc_mpi-4_omp-1.cfg  2_icc_mpi-4_omp-2.cfg  3_icc_mpi-4_omp-4.cfg  4_icc_mpi-4_omp-6.cfg  5_icc_mpi-4_omp-8.cfg  6_icc_mpi-4_omp-10.cfg  7_icc_mpi-4_omp-12.cfg  8_icc_mpi-4_omp-14.cfg
logs/m10/: 4_icc_mpi-1_omp-8.cfg
logs/m12/: 1_icc_mpi-1_omp-1.cfg  7_icc_mpi-1_omp-8.cfg  9_icc_mpi-8_omp-16.cfg
logs/mat200x200/2023-02-16-10:20:41-mat200x200/: 3_icc_mpi-8_omp-16.cfg
matrices/: bcsstk19.mtx  bcsstm13.mtx  can_1072_MARCHE_PAS.mtx  mat2.txt  mat200x200.txt  mat7x7.txt  mat9x9.txt
plot/: 1.cfg  boxplot.gp  boxplot_iter.gp  boxplot_mean.gp  freqplot.gp  plot_error.sh  plot_lineerror.gp  run_plot.sh  timeplot.gp
png/bcsstm12_mpi_variable/: 06_icc_mpi-6_omp-16.cfg  12_icc_mpi-12_omp-16.cfg  16_icc_mpi-16_omp-16.cfg  stats_iteration.data
png/bfw398b-bench-omp/: 9_icc_mpi-4_omp-16.cfg  stats_iteration.data
scripts_run/: run_par.sh  run_seq.sh
src/: calcul_residu.c  main.c  projection.c  prr.c  retour_espace_depart.c  tools.c  tools.h
(+16 files in other folders)
